--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "the-fed",
     "version": "1.0.0",
     "description": "A simple game about central banking",
-    "homepage": "https://thefed.app",
-    "repository": "github:memetic-institute/The-Fed.git",
-    "author": "IMRD <hi@memetic.institute> (https://memetic.institute)",
-    "license": "MIT",
+    "homepage": "https://thefed.wtf",
+    "repository": "gs",
+    "author": "Somewhere out there",
+    "license": "FAG",
     "private": true,
     "scripts": {
         "start": "react-scripts start",
