--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # .env.development, .env.test, or .env.production which will
 # be ignored by git.
 
-PUBLIC_URL=https://thefed.app
+PUBLIC_URL=https://thefed.wtf
 
 REACT_APP_TITLE=The Fed
 REACT_APP_THEME_COLOR=FFFFFF
